--- a/index.html
+++ b/index.html
@@ -10,60 +10,19 @@
 <body>
 
 <header>
-    <h1>Motos</h1>
+    <h1>Inicio</h1>
 </header>
 
 <nav>
     <a href="../index.html">Inicio</a> |
     <a href="../contacto.html">Contacto</a>
+    <a href="../aboutme.html">Aboutme</a> |
+    <a href="./1. estructura básica/estructurabasica.html">1. estructura básica</a>
+    <a href="./2. etiquetas/etiquetas.html">2. etiquetas</a> |
+    <a href="./3. Tablas y multimedia/Tablas y multimedia.html">3. Tablas y multimedia</a>
+    <a href="./4. formulario/formulario.html">4. formulario</a>
+    <a href="./6. proyecto/miproyecto.html">6. proyecto</a> |
+    <a href="./7. Sitio web/Web.html">7. Sitio web</a>
 </nav>
 
-<main>
-
-<section>
-    <h2>Por que me gustan las motos?</h2>
-    <p>Las motos me transmiten libertad, aventura y emoción.</p>
-</section>
-
-<section>
-<article>
-    <h2>Mi moto favorita</h2>
-    <p>Una de mis motos favoritas es la Yamaha MT-07 por su diseño y rendimiento.</p>
-    <blockquote>"La vida es mejor cuando la vives sobre dos ruedas."</blockquote>
-</article>
-</section>
-
-<h3>Tabla de modelos</h3>
-<table border="1">
-    <caption>Modelos de motos</caption>
-    <thead>
-        <tr><th>Marca</th><th>Modelo</th><th>Cilindrada</th></tr>
-    </thead>
-    <tbody>
-        <tr><td>Yamaha</td><td>MT-07</td><td>689cc</td></tr>
-        <tr><td>Kawasaki</td><td>Z650</td><td>649cc</td></tr>
-        <tr><td>Honda</td><td>CB650R</td><td>649cc</td></tr>
-    </tbody>
-    <tfoot>
-        <tr><td colspan="3">Tabla de motos populares</td></tr>
-    </tfoot>
-</table>
-
-<figure>
-    <img src="https://via.placeholder.com/300x180" alt="Moto deportiva">
-    <figcaption>Moto deportiva de ejemplo</figcaption>
-</figure>
-
-</main>
-
-<aside>
-    <p>Más información sobre motos:</p>
-    <a href="https://www.yamaha-motor.eu/es/" target="_blank">Sitio oficial Yamaha</a>
-</aside>
-
-<footer>
-    <p>© 2025 Mi Sitio de Motos</p>
-</footer>
-
-</body>
 </html>
