--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         </ul>
         <h2>Proyecto HTML </h2>
-            <li><a href="./proyecto/miproyecto.html"> Proyecto </a></li></li>
+            <li><a href="./Proyecto html/solo html.html" title="Página principal">html</a></li>
         <hr>
         <h2>Trabajos en clase - CSS3</h2>
         <ul>
@@ -31,7 +31,7 @@
         </ul>
         <hr>
         <h2>Proyecto HTML anterior con el CSS incluido </h2>
-            <li><a href="./proyecto/miproyecto.html"> Proyecto </a></li></li>
+        <li><a href="./Proyecto html/index.html" title="CSS">CSS</a></li>
         <hr>   
     </body>
 </html>
